# gltf-rs

./: .travis.yml  Cargo.toml  README.md
examples/display/: main.rs
examples/tree/: main.rs
gltf-importer/: Cargo.toml
gltf-importer/src/: lib.rs
gltf-importer/tests/: import_examples.rs
gltf-json/src/: animation.rs  path.rs  root.rs
gltf-utils/src/: lib.rs
src/: gltf.rs  lib.rs  mesh.rs
tests/: test_wrapper.rs
