[package]
name = "gltf-importer"
version = "0.8.0"
authors = ["alteous <alteous@outlook.com>"]
description = "Reference importer for the gltf crate"
repository = "https://github.com/alteous/gltf"
license = "MIT/Apache-2.0"

[dependencies]
gltf = "0.8"

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[features]
default = []
names = ["gltf/names"]
extras = ["gltf/extras"]
